Fixed Text wrap issues in navbar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -70,15 +70,15 @@ input.btn.btn-primary {
   height: calc(100vh);
   z-index: 1;
 }
+.small1, .small2, .small3{
+  display: none;
+  color: white;
+}
 
 h1{
   color: white;
 }
 .h-box h2 {
-  display: none;
-  color: white;
-}
-.h-box h3 {
   display: none;
   color: white;
 }
@@ -120,7 +120,10 @@ h1{
   .h-box h2 {
     display: block;
   }
-  .h-box h3 {
+  .small1 {
+    display: none;
+  }
+  .small2 {
     display: none;
   }
   .navbar{
@@ -149,7 +152,7 @@ h1{
     width: 100%;
   }
 }
-@media screen and (max-width: 624px) {
+@media screen and (min-width: 550px) and (max-width: 624px) {
   .big1 {
     display: none;
   }
@@ -171,11 +174,104 @@ h1{
   .h-box h2 {
     display: none;
   }
-  .h-box h3 {
+  .small1 {
     display: block;
+  }
+  .small2 {
+    display: none;
   }
   .navbar{
     display: block;
+  }
+  .drop{
+    display: block;
+  }
+  .dropdown-menu {
+    transform: none;
+    padding: auto;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 400px) and (max-width: 549px) {
+  .big1 {
+    display: none;
+  }
+  .big2 {
+    display: none;
+  }
+  .big {
+    display: none;
+  }
+  .med {
+    display: none;
+  }
+  .small {
+    display: block;
+  }
+  .h-box h1 {
+    display: none;
+  }
+  .h-box h2 {
+    display: none;
+  }
+  .small1 {
+    display: none;
+  }
+  .small2 {
+    display: block;
+  }
+  .small3 {
+    display: none;
+  }
+  .navbar{
+  display: block;
+  }
+  .drop{
+    display: block;
+  }
+  .dropdown-menu {
+    transform: none;
+    padding: auto;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 399px) {
+  .big1 {
+    display: none;
+  }
+  .big2 {
+    display: none;
+  }
+  .big {
+    display: none;
+  }
+  .med {
+    display: none;
+  }
+  .small {
+    display: block;
+  }
+  .h-box h1 {
+    display: none;
+  }
+  .h-box h2 {
+    display: none;
+  }
+  .small1 {
+    display: none;
+  }
+  .small2 {
+    display: none;
+  }
+  .small3{
+    display: block;
+  }
+  .navbar{
+  display: block;
   }
   .drop{
     display: block;
